  options to offload computationally intensive tasks to any
  OpenCL-compatible GPU device.

  On systems with more than one device `--prefer-gpu' selects the
  desired GPU.


** Developer Stuff

- A C++11-compatible compiler is required to compile Enblend and
  Enfuse.

- Support for older versions of the Boost filesystem library has been
  dropped.


** Package Maintainer Stuff

- Vigra version 1.9 or later is now required to build.

- Little CMS version 2.5 or later is now required to build.

- Support for OpenGL acceleration has been dropped.  So, the
  dependencies on the libraries GL, GLU, and Glut are no longer exist.


* Version 4.1  "Trouble In Paradise"

Released on December 8, 2012.

** Improvements

- All deprecated options since version 4.0 have been removed.

- A new primary seam-line generator, based on a Graph-Cut algorithm,
  has been implemented during GSoC 2011 by Mikołaj Leszczyński.  The
  old Nearest-Feature Transform remains the default.  The new
  algorithm is activated with "--primary-seam-generator=graph-cut".

- The difference image on which Enblend's seam-line optimization
  relies for color images uses a perceptual model by default (option
  "--image-difference"), yielding a true CIE76 "Delta E" with the
  (default) luminance and chrominance weights of 1.

- Parallelize CIECAM02 color conversion (option "--ciecam").  Speedups
  of up to 40% have been reported on the amd64 architecture.  The
  computationally expensive color-space conversion still slows down
  blending and fusing by some 25%.

- Enblend and Enfuse integrate seamlessly in color-managed workflow.
  Input images with color profiles automatically enable CIECAM
  blending and the output image is assigned the input images' color
  profile.

- Enblend and Enfuse exploit a new feature in LittleCMS Version 2.x
  called "Unbounded CMM".  Thereby, the hue and saturation of extreme
  shadows and highlights can be preserved much longer before pure
  black or white are reached.  See: