@@ -1,4 +1,4 @@
 @set UPDATED 12 April 2014
 @set UPDATED-MONTH April 2014
-@set EDITION 4.2-2511ec591ef7
-@set VERSION 4.2-2511ec591ef7
+@set EDITION 4.2-6d00c7ff519d
+@set VERSION 4.2-6d00c7ff519d
